added colors using console

--- a/tasks.json
+++ b/tasks.json
@@ -5,5 +5,12 @@
         "description": "tire rotation",
         "priority": 3,
         "status": "pending"
+    },
+    {
+        "id": 3,
+        "title": "Feed the birds",
+        "description": "feed",
+        "priority": 1,
+        "status": "pending"
     }
 ]
